# QuranReader

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
